<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6E8F3"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="410dp"
        android:layout_height="140dp"
        android:background="#C3091453"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-1dp">

        <TextView
            android:id="@+id/txt_Correo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="25dp"
            android:text="@string/CorreoElectrónico"
            android:textColor="@color/white"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="139dp"
            android:layout_height="32dp"
            android:layout_marginTop="1dp"
            android:background="#FAF6F6"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="@+id/txt_Correo"
            app:layout_constraintTop_toBottomOf="@+id/txt_Correo" />

        <CheckBox
            android:id="@+id/NoCerrarSesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NoCerrarSesión"
            android:textColor="@color/white"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

        <TextView
            android:id="@+id/txt_contraseña"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/Contraseña"
            android:textColor="@color/white"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="@+id/txt_Correo"
            app:layout_constraintStart_toEndOf="@+id/txt_Correo"
            app:layout_constraintTop_toTopOf="@+id/txt_Correo" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="162dp"
            android:layout_height="33dp"
            android:background="#FBF9F9"
            android:ems="10"
            android:inputType="textPassword"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/txt_contraseña"
            app:layout_constraintTop_toBottomOf="@+id/txt_contraseña" />

        <TextView
            android:id="@+id/txt_OlvidarContraseña"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/HasOlvidadoTuContraseña"
            android:textColor="@color/white"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

        <Button
            android:id="@+id/btn_Entrar"
            android:layout_width="84dp"
            android:layout_height="38dp"
            android:layout_marginStart="2dp"
            android:backgroundTint="#BE6875BD"
            android:text="@string/Entrar"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="@+id/editTextTextPassword"
            app:layout_constraintStart_toEndOf="@+id/editTextTextPassword"
            app:layout_constraintTop_toTopOf="@+id/editTextTextPassword" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="17dp"
            android:layout_height="17dp"
            app:layout_constraintBottom_toBottomOf="@+id/txt_Correo"
            app:layout_constraintStart_toEndOf="@+id/txt_Correo"
            app:layout_constraintTop_toTopOf="@+id/txt_Correo"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/email" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="22dp"
            android:layout_height="13dp"
            app:layout_constraintBottom_toBottomOf="@+id/txt_contraseña"
            app:layout_constraintStart_toEndOf="@+id/txt_contraseña"
            app:layout_constraintTop_toTopOf="@+id/txt_contraseña"
            app:layout_constraintVertical_bias="0.4"
            app:srcCompat="@drawable/clave" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/txt_Registrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/Registrate"
        android:textColor="#212B65"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <TextView
        android:id="@+id/txt_Gratis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/Esgratis"
        android:textColor="#212B65"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/txt_Registrate"
        app:layout_constraintTop_toBottomOf="@+id/txt_Registrate" />

    <TextView
        android:id="@+id/txt_Nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="40dp"
        android:text="@string/Nombre"
        android:textColor="#2D3871"
        app:layout_constraintStart_toStartOf="@+id/txt_Gratis"
        app:layout_constraintTop_toBottomOf="@+id/txt_Gratis" />

    <EditText
        android:id="@+id/id_Nombre"
        android:layout_width="171dp"
        android:layout_height="28dp"
        android:layout_marginStart="5dp"
        android:background="#FBF6F6"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/txt_Nombre"
        app:layout_constraintStart_toEndOf="@+id/txt_Nombre"
        app:layout_constraintTop_toTopOf="@+id/txt_Nombre" />

    <TextView
        android:id="@+id/txt_Apellidos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/Apellidos"
        android:textColor="#2D3871"
        app:layout_constraintEnd_toEndOf="@+id/txt_Nombre"
        app:layout_constraintTop_toBottomOf="@+id/txt_Nombre" />

    <EditText
        android:id="@+id/id_Apellido"
        android:layout_width="169dp"
        android:layout_height="28dp"
        android:background="#FBF6F6"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/txt_Apellidos"
        app:layout_constraintEnd_toEndOf="@+id/id_Nombre"
        app:layout_constraintStart_toStartOf="@+id/id_Nombre"
        app:layout_constraintTop_toTopOf="@+id/txt_Apellidos" />

    <TextView
        android:id="@+id/txt_correo"
        android:layout_width="116dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:text="@string/Correo"
        android:textColor="#2D3871"
        app:layout_constraintEnd_toEndOf="@+id/txt_Apellidos"
        app:layout_constraintTop_toBottomOf="@+id/txt_Apellidos" />

    <EditText
        android:id="@+id/id_Correo"
        android:layout_width="166dp"
        android:layout_height="30dp"
        android:background="#FBF6F6"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/txt_correo"
        app:layout_constraintEnd_toEndOf="@+id/id_Apellido"
        app:layout_constraintStart_toStartOf="@+id/id_Apellido"
        app:layout_constraintTop_toTopOf="@+id/txt_correo" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/ContraseñaNueva"
        android:textColor="#1B2247"
        app:layout_constraintEnd_toEndOf="@+id/txt_correo"
        app:layout_constraintTop_toBottomOf="@+id/txt_correo" />

    <EditText
        android:id="@+id/id_Clave"
        android:layout_width="166dp"
        android:layout_height="27dp"
        android:background="#FBF6F6"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="@+id/id_Correo"
        app:layout_constraintStart_toStartOf="@+id/id_Correo"
        app:layout_constraintTop_toTopOf="@+id/textView10" />

    <TextView
        android:id="@+id/txt_Sexo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/Sexo"
        android:textColor="#1C2553"
        app:layout_constraintEnd_toEndOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <Spinner
        android:id="@+id/spinner_sexo"
        android:layout_width="103dp"
        android:layout_height="27dp"
        android:entries="@android:array/organizationTypes"
        app:layout_constraintBottom_toBottomOf="@+id/txt_Sexo"
        app:layout_constraintStart_toStartOf="@+id/id_Clave"
        app:layout_constraintTop_toTopOf="@+id/txt_Sexo" />

    <TextView
        android:id="@+id/txt_Nacimiento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/Nacimiento"
        android:textColor="#1C2553"
        app:layout_constraintEnd_toEndOf="@+id/txt_Sexo"
        app:layout_constraintTop_toBottomOf="@+id/txt_Sexo" />

    <Spinner
        android:id="@+id/spinner_dia"
        android:layout_width="63dp"
        android:layout_height="24dp"
        android:entries="@android:array/imProtocols"
        app:layout_constraintBottom_toBottomOf="@+id/txt_Nacimiento"
        app:layout_constraintStart_toStartOf="@+id/spinner_sexo"
        app:layout_constraintTop_toTopOf="@+id/txt_Nacimiento" />

    <Spinner
        android:id="@+id/spinner_mes"
        android:layout_width="85dp"
        android:layout_height="27dp"
        android:entries="@android:array/imProtocols"
        android:scrollbarSize="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/spinner_dia"
        app:layout_constraintTop_toTopOf="@+id/spinner_dia"
        tools:layout_editor_absoluteX="232dp" />

    <Spinner
        android:id="@+id/spinner_año"
        android:layout_width="75dp"
        android:layout_height="28dp"
        android:entries="@android:array/imProtocols"
        app:layout_constraintBottom_toBottomOf="@+id/spinner_mes"
        app:layout_constraintTop_toTopOf="@+id/spinner_mes"
        tools:layout_editor_absoluteX="328dp" />

    <TextView
        android:id="@+id/txt_Informacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:text="@string/Informacion"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/spinner_dia"
        app:layout_constraintTop_toBottomOf="@+id/spinner_mes" />

    <Button
        android:id="@+id/btn_Registrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-30dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#8BC34A"
        android:drawableLeft="@drawable/baseline_output_24"
        android:text="@string/Registrar"
        app:layout_constraintStart_toStartOf="@+id/txt_Informacion"
        app:layout_constraintTop_toBottomOf="@+id/txt_Informacion" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="16dp"
        android:layout_height="27dp"
        app:layout_constraintBottom_toBottomOf="@+id/id_Nombre"
        app:layout_constraintStart_toEndOf="@+id/id_Nombre"
        app:layout_constraintTop_toTopOf="@+id/id_Nombre"
        app:srcCompat="@drawable/nombre" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/id_Apellido"
        app:layout_constraintStart_toEndOf="@+id/id_Apellido"
        app:layout_constraintTop_toTopOf="@+id/id_Apellido"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/apellido" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="22dp"
        android:layout_height="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/id_Correo"
        app:layout_constraintStart_toEndOf="@+id/id_Correo"
        app:layout_constraintTop_toTopOf="@+id/id_Correo"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/email" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="24dp"
        android:layout_height="27dp"
        app:layout_constraintBottom_toBottomOf="@+id/id_Clave"
        app:layout_constraintStart_toEndOf="@+id/id_Clave"
        app:layout_constraintTop_toTopOf="@+id/id_Clave"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/clave" />

</androidx.constraintlayout.widget.ConstraintLayout>